--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 </head>
 <body class='typora-export os-windows' >
 <div  id='write'  class = 'is-node'><h1><a name='header-n14' class='md-header-anchor '></a><center>来啦老杜</center></h1><p><img src='https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268/sign=2bebd6d201f3d7ca0cf63870ca1dbe3c/11385343fbf2b21120da14a2c78065380dd78e62.jpg' alt='' referrerPolicy='no-referrer' /></p><p>&nbsp;</p></div>
+<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a><center>来啦老杜</center></h1><p><img src='https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268/sign=2bebd6d201f3d7ca0cf63870ca1dbe3c/11385343fbf2b21120da14a2c78065380dd78e62.jpg' alt='' referrerPolicy='no-referrer' /></p><p><img src='/jpg/PC.jpg' alt='' referrerPolicy='no-referrer' /></p><p>&nbsp;</p></div>
 </body>
 </html>
