--- a/mail/to-zhu.html
+++ b/mail/to-zhu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>来啦老杜</title><link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
+<title>to-zhu</title><link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
 iframe { margin: auto; }
@@ -220,13 +220,15 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 .dropdown-menu .divider { border-color: rgb(229, 229, 229); }
 
 
-
+span{
+    padding-left: 30px;
+}
 
 
  .typora-export li, .typora-export p, .typora-export,  .footnote-line {white-space: normal;} 
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = 'is-node'><h1><a name='header-n0' class='md-header-anchor '></a><center>个人博客网站（建设中）</center></h1></div>
+<div  id='write'  class = 'is-node'><p>朱总，</p><p>你好！</p><p><span>		</span>周二，您提到的经验的累积，时间的确是说明的经验的多少的一个量，但经验还包含了：经验的属性和经验的含金量拿个实例来举例：</p><p><span>		</span>16P016调速板LED灯的测试，一开始佳琪最早的方案是通过产品去测产品，靠上位机加主控板，以产品测产品的方式接在控制器上气缸控制开关去测试产品，这样效率低还有不良品产生。后期韩工用了硬件电路，流水灯的显示方式去目检，效率是搞了，但是会有漏视。而我是根据不同颜色“绿”和“红”色发光的波长不同，能量消耗不同（P=UI），通过模数采样得到不同数据区分颜色，最后通过两个光敏去判断位置，从底层原理向上分析设计。也通过了品质把所有不良情况都验证了一遍，不但通过验证，还保证了无需员工目视和能够检测LED灯的体质（偏暗偏亮）。</p><p><span>		</span>所以年龄并不是衡量技术的标准，技术是不断更新的，在同等条件下能够掌握细节，做的比别人好才是关键。</p><p><span>		</span>三个月前，我和你谈论过，因为我知道当时因为工作的原因，目前的工作内容过于简单也无法发挥出我的能力，于是说定以做好17P001测试机为一个展台去展示我的设计能力。但是我内心知道只做出了机械设计部分是远远不够的，于是我利用空余和下班时间去研究，最后做出了图像界面测试软件（上位机）核心架构，以自己擅长的MCU去编程和设计了一块测试主板，去给王总展示成果，并按照王总所理想的要求写了15页的《测试设备规划书.docx》去证明了我有能力独立完成一套完成的测试设备并网络化管理。</p><p><span>		</span>我想用我机械设计、软件编程、硬件电路的能力去帮助研发分担工作，能够更有时间去投入公司产品设计。展现自己积累经验，并为公司带来研发成果和技术升级，未来也可以培训技术员作一个管理。</p><p><span>		</span>我会的多并不是为了说明我能单干不靠团队，而是因为只会一项技能是做不出来一个整体。做人只能靠自己，如果核心部分都非要求别人去做，也是做不好一个优秀的项目的。而且会的多，懂的多，才能跟得上未来技术的步伐。只有能力强的人才能得到更多人的认可。</p><p><span>		</span>曾经或许是我从实习开始未换过公司，或许我第一份安排的工作并不适合我，或许过往的领导无法让我展现自己的实力，不过两年的不公的磨练已让我崛起。</p><p><span>		</span>我不拿自己和别人比较，因为别人能力的多少通过看是无法看全的，不知道对方还隐藏着多少实力，我一直拿自己与自己心中理想的目标进行对比。</p><p><span>		</span>我的要求是6000，如果给我5500我也同意了，那就说明5500是同等于6000的，如果我同意了对于我而言，就说明了我对自身的不认可。</p><p><span>																																										</span><p align="right">范佑文&nbsp;&nbsp;&nbsp;</p>	</span><p align="right">Edwin Van</p></div>
 </body>
 </html>
