--- a/ProductManual/RLT21T001productData.html
+++ b/ProductManual/RLT21T001productData.html
@@ -5,5 +5,5 @@
 	4000Nm锂电扳手产品资料目录
 </h1>
 <p>
-	<a href="https://www.yuque.com/edwinvan/xmghqv/ca74fdhg5n83eifa?singleDoc#">产品说明书</a>
+	<a href="https://www.smarttighten.com/ProductManual/RLT21T001productData.html">产品说明书</a>
 </p>
