--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+
 <html lang='zh-CN'>
 <meta charset='utf-8'>
 <p>
-	hello
+	<a href="https://www.yuque.com/edwinvan/xmghqv/ca74fdhg5n83eifa?singleDoc#" target="_blank">&nbsp;《21T001产品操作手册》</a>
 </p>
 </html>
